# qhttp

./: CMakeLists.txt
example/helloworld/: main.cpp
src/: qhttpabstracts.cpp  qhttpabstracts.hpp  qhttpclient.cpp  qhttpclient.hpp  qhttpclientresponse.hpp  qhttpfwd.hpp  qhttpserverconnection.cpp
src/private/: httpreader.hxx
